--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@jiaminghi/data-view": "^2.10.0",
     "axios": "^1.5.1",
     "babel-plugin-component": "^1.1.1",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.14",
+    "js-md5": "^0.8.3",
+    "node-sass": "^9.0.0",
+    "sass-loader": "^13.3.2",
     "sortablejs": "^1.15.0",
     "vue": "^2.6.14",
     "vue-contextmenujs": "^1.4.11",
@@ -28,6 +32,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "sass-loader": "^13.3.2",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
